--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,9 @@ jobs:
   activate:
     name: Activate license
     runs-on: ubuntu-latest
-    steps:
+    steps:              
+    - name: List Files Action
+      uses: mirko-felice/list-files-action@v3.0.5
     - uses: game-ci/unity-test-runner@v3
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
