--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,11 @@ jobs:
     steps:              
     - name: List Files Action
       uses: mirko-felice/list-files-action@v3.0.5
+      with:
+        repo: ${{ github.repository }}
+        ref: ${{ github.ref }}
+        path: "."
+        ext: "*"
     - uses: game-ci/unity-test-runner@v3
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
