--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
     - uses: game-ci/unity-test-runner@v3
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL  }}
+        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD  }}
       with:
         projectPath: ${{ env.PROJECT_PATH }}
         githubToken: ${{ secrets.GITHUB_TOKEN }}
