--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -4,7 +4,7 @@ on:
 jobs:
   activation:
     name: Request manual activation file
-    runs-on: win64-latest
+    runs-on: ubuntu-latest
     steps:
       # Request manual activation file
       - name: Request manual activation file
