--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,18 +5,21 @@ on:
     branches:
   workflow_dispatch: {}
 jobs:
-  activate:
-    name: Activate license
+  test:
+    name: Run tests
     runs-on: ubuntu-latest
     steps:
-    - name: List Files Action
-      uses: mirko-felice/list-files-action@v3.0.5
+    - uses: actions/checkout@v2
       with:
-        repo: ${{ github.repository }}
-        ref: ${{ github.ref }}
-        path: "."
-        ext: ""
-    - uses: game-ci/unity-test-runner@v3
+        lfs: true
+    - uses: actions/cache@v2
+      with:
+        path: ${{ matrix.projectPath }}/Library
+        key: Library-${{ matrix.projectPath }}
+        restore-keys: |
+          Library-
+    - name: Run tests
+      uses: game-ci/unity-test-runner@v3
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         UNITY_EMAIL: ${{ secrets.UNITY_EMAIL  }}
@@ -24,4 +27,17 @@ jobs:
       with:
         projectPath: ${{ env.PROJECT_PATH }}
         githubToken: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload test artifacts
+      uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: Test results
+        path: artifacts
+    - name: Upload coverage artifacts
+      uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: Coverage results
+        path: ${{ steps.myTestStep.outputs.coveragePath }}
+  build:
 
