--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   test:
     name: Run tests
-    id: tests
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -19,7 +18,7 @@ jobs:
         key: Library-${{ matrix.projectPath }}
         restore-keys: |
           Library-
-    - name: Run tests
+    - name: tests
       uses: game-ci/unity-test-runner@v3
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
@@ -33,7 +32,7 @@ jobs:
       if: always()
       with:
         name: Test results
-        path: artifacts
+        path: ${{ steps.tests.outputs.artifactsPath }}
     - name: Upload coverage artifacts
       uses: actions/upload-artifact@v2
       if: always()
