--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      name: Checkout main
       with:
         lfs: true
     - uses: actions/cache@v2
+      name: Cache main
       with:
         path: ${{ matrix.projectPath }}/Library
         key: Library-${{ matrix.projectPath }}
         restore-keys: |
           Library-
-    - name: tests
+    - name: Run tests
+      id: tests
       uses: game-ci/unity-test-runner@v3
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
