--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: test, build and push the application to itch.io
-run-name: testing, building and pushing for ${{ github.actor }}
+run-name: build for ${{ github.actor }}, ${{ github.event.head_commit.message }}
 on:
   push:
     branches:
@@ -42,5 +42,32 @@ jobs:
       with:
         name: Coverage results
         path: ${{ steps.tests.outputs.coveragePath }}
-
-
+  build-webgl:
+    name: Build WebGL
+    runs-on: ubuntu-latest
+    needs: test
+    steps: 
+    - uses: actions/checkout@v2
+      name: Checkout main
+      with:
+        lfs: true
+    - uses: actions/cache@v2
+      name: Cache main
+      with:
+        path: ${{ matrix.projectPath }}/Library
+        key: Library-${{ matrix.projectPath }}
+        restore-keys: |
+          Library-
+    - uses: game-ci/unity-builder@v3
+      env:
+        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL  }}
+        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD  }}
+      with:
+        targetPlatform: WebGL
+        projectPath: ${{ env.PROJECT_PATH }}
+        allowDirtyBuild: true
+    - uses: actions/upload-artifact@v2
+      with:
+        name: WebGL
+        path: build
