--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,3 +71,90 @@ jobs:
       with:
         name: WebGL
         path: build
+  build-windows:
+    name: Build Windows
+    runs-on: ubuntu-latest
+    needs: test
+    steps: 
+    - uses: actions/checkout@v2
+      name: Checkout main
+      with:
+        lfs: true
+    - uses: actions/cache@v2
+      name: Cache main
+      with:
+        path: ${{ matrix.projectPath }}/Library
+        key: Library-${{ matrix.projectPath }}
+        restore-keys: |
+          Library-
+    - uses: game-ci/unity-builder@v3
+      env:
+        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL  }}
+        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD  }}
+      with:
+        targetPlatform: StandaloneWindows
+        projectPath: ${{ env.PROJECT_PATH }}
+        allowDirtyBuild: true
+    - uses: actions/upload-artifact@v2
+      with:
+        name: Windows
+        path: build
+  build-macos:
+    name: Build MacOS
+    runs-on: ubuntu-latest
+    needs: test
+    steps: 
+    - uses: actions/checkout@v2
+      name: Checkout main
+      with:
+        lfs: true
+    - uses: actions/cache@v2
+      name: Cache main
+      with:
+        path: ${{ matrix.projectPath }}/Library
+        key: Library-${{ matrix.projectPath }}
+        restore-keys: |
+          Library-
+    - uses: game-ci/unity-builder@v3
+      env:
+        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL  }}
+        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD  }}
+      with:
+        targetPlatform: StandaloneOSX
+        projectPath: ${{ env.PROJECT_PATH }}
+        allowDirtyBuild: true
+    - uses: actions/upload-artifact@v2
+      with:
+        name: MacOS
+        path: build
+  build-linux:
+    name: Build Linux
+    runs-on: ubuntu-latest
+    needs: test
+    steps: 
+    - uses: actions/checkout@v2
+      name: Checkout main
+      with:
+        lfs: true
+    - uses: actions/cache@v2
+      name: Cache main
+      with:
+        path: ${{ matrix.projectPath }}/Library
+        key: Library-${{ matrix.projectPath }}
+        restore-keys: |
+          Library-
+    - uses: game-ci/unity-builder@v3
+      env:
+        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL  }}
+        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD  }}
+      with:
+        targetPlatform: StandaloneLinux64
+        projectPath: ${{ env.PROJECT_PATH }}
+        allowDirtyBuild: true
+    - uses: actions/upload-artifact@v2
+      with:
+        name: Linux
+        path: build
