--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -179,3 +179,12 @@ jobs:
       with:
         name: MacOS build
         path: build/macos
+    - name: Itch.io - Publish
+      uses: KikimoraGames/itch-publish@v0.0.3
+      with:
+        butlerAPIKey: ${{ secrets.ITCH_KEY }}
+        gameData: build/StandaloneWindows
+        itchUsername: zerofox-studio
+        itchGameId: masked-guardian-of-the-elemental-wilds
+        buildChannel: windows
+        
